Fixing broken arrow (card-collapse control), it has a collision with a css style

--- a/static/source/assets/css/omnibox.css
+++ b/static/source/assets/css/omnibox.css
@@ -513,7 +513,7 @@
     max-height: 220px;
 }
 
-.icon-ready-to-rotate {
+.ready-to-rotate {
     -webkit-transition: all .3s ease;
 }
 
